src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_results_pane_with_syntax_error_focused.snap
---
source: src/app/render.rs
expression: output
---
"┌ ⚠ Syntax Error (last successful query result) ───────────────────────────────┐"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view)───────────────────────────────┐"
"│.invalid[                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Focus | Enter: Exit with Results | Ctrl+Q: Exit "
