src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_search_bar_no_matches.snap
---
source: src/app/render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search: ────────────────────────────────────────────────────────────── (0/0) ┐"
"│xyz                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Pane | Enter: Output Result | Ctrl+Q: Output Que"
