src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_search_bar_with_match_count.snap
---
source: src/app/render.rs
expression: output
---
"┌ Array [3 objects] ───────────────────────────────────────────────────────────┐"
"│[                                                                             │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "bob"                                                             │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search: ────────────────────────────────────────────────────────────── (1/2) ┐"
"│alice                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Pane | Enter: Output Result | Ctrl+Q: Output Que"
