src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_search_with_highlighted_matches.snap
---
source: src/app/render.rs
expression: output
---
"┌ Array [3 objects] ───────────────────────────────────────────────────────────┐"
"│[                                                                             │"
"│  {                                                                           │"
"│    "name": "alice",                                                          │"
"│    "email": "alice@test.com"                                                 │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "bob"                                                             │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "name": "alice"                                                           │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search: ────────────────────────────────────────────────────────────── (2/3) ┐"
"│alice                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Pane | Enter: Output Result | Ctrl+Q: Output Que"
