src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_stats_bar_array_focused.snap
---
source: src/app/render.rs
expression: output
---
"┌ Array [3 objects] ───────────────────────────────────────────────────────────┐"
"│[                                                                             │"
"│  {                                                                           │"
"│    "id": 1                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 2                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 3                                                                   │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Pane | Enter: Output Result | Ctrl+Q: Output Que"
